--- a/src/app/appliances/appliances.component.html
+++ b/src/app/appliances/appliances.component.html
@@ -39,9 +39,9 @@
         </mat-card>
 
         <mat-card class="tvcard">
-          <img class="tvimg" mat-button (click)="WashingmachineOpenDialog()" mat-card-image src="../../assets/tvicon.png"mat-dialog-close>
+          <img class="tvimg" mat-button (click)="TelevisionOpenDialog()" mat-card-image src="../../assets/tvicon.png"mat-dialog-close>
             <mat-card-content>
-              <button class="h1tv" mat-button (click)="WashingmachineOpenDialog()" mat-dialog-close>Television</button>
+              <button class="h1tv" mat-button (click)="TelevisionOpenDialog()" mat-dialog-close>Television</button>
             </mat-card-content>
         </mat-card>
 
