--- a/src/app/refrigeratordetails/refrigeratordetails.component.css
+++ b/src/app/refrigeratordetails/refrigeratordetails.component.css
@@ -11,18 +11,6 @@
     margin-top: 5px;
     margin-left: 18px;
 }
-.servicetype
-{
-    margin-left: 40px;
-    margin-top: 10px;
-    font-family: 'Trebuchet MS';
-}
-.zipcode
-{
-    margin-left: 40px;
-    margin-top: 10px;
-    font-family: 'Trebuchet MS';
-}
 .refrigeratorselect
 {
     margin-left: 40px;
@@ -81,8 +69,10 @@
 }
 .close-button{
     float: right;
-    top:14px;
-    right:-15px;
+    top: 5px;
+}
+.close-button:hover{
+    background-color: #cccccc;
 }
 .close-icon{
     margin: auto;
