--- a/src/app/refrigeratordetails/refrigeratordetails.component.html
+++ b/src/app/refrigeratordetails/refrigeratordetails.component.html
@@ -1,79 +1,71 @@
 <html>
-  <body>
-    <div class=mat-dialog-content>
-      <div fxLayoutAlign="end">
-        <button mat-icon-button class="close-button" [mat-dialog-close]="true">
-          <mat-icon class="close-icon" color="warn">close</mat-icon>
-        </button>
-      </div>
 
-    </div>  
+<body>
+  <div class=mat-dialog-content>
+    <div fxLayoutAlign="end">
+      <button mat-icon-button class="close-button" [mat-dialog-close]="true">
+        <mat-icon class="close-icon" color="warn">close</mat-icon>
+      </button>
+    </div>
+
+  </div>
 
 
-<!--Property Type-->    
-<div>
+  <!--Property Type-->
+  <div>
     <h1 class="h1title">Unit Details</h1>
-</div> 
+  </div>
 
-<div>
+  <div>
     <mat-form-field class="refrigeratorselect" appearance="outline">
-        <mat-label>Refrigerator Type</mat-label>
+      <mat-label>Refrigerator Type</mat-label>
       <mat-select>
-        <mat-option value="one">Single Door</mat-option>
-        <mat-option value="two">Two Door Top Freezer</mat-option>
-        <mat-option value="three">Two Door Bottom Freezer</mat-option>
-        <mat-option value="four">Multi Door-Shelves</mat-option>
-        <mat-option value="five">Chest Freezer</mat-option>
-        <mat-option value="six">Single Door Commercial</mat-option>
-       </mat-select>
+        <mat-option *ngFor="let rt of ref_type" [value]="rt">
+          {{rt}}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
 
     <mat-form-field class="refregieratorbrand" appearance="outline">
-        <mat-label>Brand</mat-label>
+      <mat-label>Brand</mat-label>
       <mat-select>
-        <mat-option value="one">Aiwa</mat-option>
-        <mat-option value="two">American Home</mat-option>
-        <mat-option value="three">Asahi</mat-option>
-        <mat-option value="four">Camel</mat-option>
-        <mat-option value="five">Carrier</mat-option>
-        <mat-option value="five">Other</mat-option>
-    
-       </mat-select>
+        <mat-option *ngFor="let brand of ref_brand" [value]="brand">
+          {{brand}}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
 
     <mat-form-field class="unittype" appearance="outline">
-        <mat-label>Unit Type</mat-label>
+      <mat-label>Unit Type</mat-label>
       <mat-select>
-        <mat-option value="one">Inverter</mat-option>
-        <mat-option value="two">Non-Inverter</mat-option>
-        <mat-option value="three">I don't know</mat-option>
-       </mat-select>
+        <mat-option *ngFor="let rut of ref_unitType" [value]="rut">
+          {{rut}}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
 
     <div>
-        <mat-form-field class="refrigeratorprob" appearance="outline">
-            <mat-label>Unit Problem</mat-label>
-            <mat-select>
-                <mat-option value="one">Freezer is cold but refrigerator warm</mat-option>
-                <mat-option value="two">Refrigerator is freezing food</mat-option>
-                <mat-option value="three">Making noise</mat-option>
-                <mat-option value="Four">Ice and or Water dispenser is not working</mat-option>
-                <mat-option value="Five">Temperature control not working</mat-option>
-                <mat-option value="Six">Refrigerator light is not working</mat-option>
-                <mat-option value="Seven">Other</mat-option>
-                <mat-option value="Eight">I don't know</mat-option>
-            </mat-select>
-        </mat-form-field>
-    </div>
-    
-    <div>
-        <button class="addunit" mat-stroked-button><mat-icon>add_box</mat-icon>Add unit</button>
+      <mat-form-field class="refrigeratorprob" appearance="outline">
+        <mat-label>Unit Problem</mat-label>
+        <mat-select>
+          <mat-option *ngFor="let rtp of ref_unitProblem" [value]="rtp">
+            {{rtp}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
 
     <div>
-        <button class="done" mat-raised-button mat-dialog-close routerLink="/servicedetails">Next</button>
-        
+      <button class="addunit" mat-stroked-button>
+        <mat-icon>add_box</mat-icon>Add unit
+      </button>
     </div>
-    </div> 
-  </body>
+
+    <div>
+      <button class="done" mat-raised-button mat-dialog-close routerLink="/servicedetails">Next</button>
+
+    </div>
+  </div>
+</body>
+
 </html>
