--- a/src/app/washingmachinedetails/washingmachinedetails.component.css
+++ b/src/app/washingmachinedetails/washingmachinedetails.component.css
@@ -11,20 +11,6 @@
     margin-left: 18px;
 }
 
-.servicetype
-{
-    margin-left: 40px;
-    margin-top: 10px;
-    font-family: 'Trebuchet MS';
-}
-
-.zipcode
-{
-    margin-left: 40px;
-    margin-top: 10px;
-    font-family: 'Trebuchet MS';
-}
-
 .washingmachineselect
 {
     margin-left: 40px;
@@ -82,8 +68,10 @@
 }
 .close-button{
     float: right;
-    top: 14px;
-    margin: auto;
+    top: 5px;
+}
+.close-button:hover{
+    background-color: #cccccc;
 }
 .close-icon{
     margin: auto;
