--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -7,102 +7,21 @@
     border-radius: 40px;
 }
 
+.homebg1
+{
+    margin-top: -600px;
+    width: 1000px;
+    height: 1064px;
+    float: right;
+    margin-right: -16px;
+    
+    
+}
+
 .logo
 {
-height: 130px;;
-width: 150px;
-margin-left: 180px;
-padding-top: 30px;
-}
-
-.frontcard
-{
-
-border-radius: 40px;
-margin-top: 20px;
-margin-left: 40px;
-height: 850px;
-width: 1790px;
-background-color: #EAE2B7;
-opacity: 100%;
-position:absolute;
-}
-
-.menu
-{
-    float: right;
-    margin-right: 290px;
-    margin-top: 60px;
-}
-
-.menuButton
-{
-    margin-right: 30px;
-    font-size: 18px;
-    font-family: 'Roboto', sans-serif;
-    color: #14213D;
-}
-
-
-.serviceBtn
-{
-    background-color: #D62828;
-    color: #14213D;
-    height: 45px;
-    width: 140px;
+    width: 200px;
+    height: 200px;
     margin-left: 300px;
-    margin-top: -10px;
-    margin-left: 3px;
-}
-
-.booklink
-{
-    color: white;
-    text-decoration: none;
-}
-    
-.booklink:hover 
-{
-
-    color: #EAE2B7;
-
-}
-
-.title
-{
-    color: #14213D;
-    font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;  
-}
-
-.title1
-{
-    color: #14213D;
-    font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif; 
-    margin-top: -40px; 
-}
-
-.title2
-{
-    color: #14213D;
-    font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;  
-    margin-top: -40px; 
-}
-
-.content
-{
-    margin-left: 1095px;
-    margin-top: 120px;;
-}
-
-.vector
-{
-height: 550px;
-width: 750px;
-position: absolute;
-bottom: 150px;
-margin-left: 125px;
-
+    margin-top: 100px;
 }
